--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/css.css">
     <meta charset="UTF-8">
     <title>Home Page</title>
@@ -20,10 +21,10 @@
       <div class="nav">
         <ul>
             <li class="homepage"><a href="#"><img src="images/home.svg">Home</a></li>
-            <li class="gmm"><a href="#"><img src="images/gmm-logo.svg">Grammy</a></li>
-            <li class="rs"><a href="#">RS Promotion</a></li>
-            <li class="kita"><a href="#">คีตา เรคคอร์ด</a></li>
-            <li class="nititad"><a href="#">นิธิทัศน์ โปรดักชั่น</a></li>
+            <li class="gmm"><a href="#"><img src="images/gmm-logo.svg"><br><span>Grammy</span></a></li>
+            <li class="rs"><a href="#"><img src="images/rs-logo.jpg"><br><span>Promotion</span></a></li>
+            <li class="kita"><a href="#"><img src="images/kita_logo.png"><br><span>คีตา เรคคอร์ด</span></a></li>
+            <li class="nititad"><a href="#"><img src="images/nititad_logo.png"><br><span>นิธิทัศน์ โปรดักชั่น</span></a></li>
           </ul>
       </div>
       <div class="content">
