--- a/h.html
+++ b/h.html
@@ -8,52 +8,84 @@
 </head>
 <body>
     <div class="container">
-    <div class="h-h1"><h1>4 ค่ายเพลงยักษ์ใหญ่ ยุค 90s</h1></div>
-    <p>
-ช่วง 30 ปีก่อนหรือที่เราเรียกว่ายุค 90s อย่างมากมาย บางคนก็โด่งดังและมีผลงานต่อเนื่องใน
-    </p>
-    <ul>
-        <li><span style="color:palevioletred">Grammy</span> ตัวอย่างเช่น</li>
+        <div class ="col-reg">
+            <a href="form.html">สมัครสมาชิก</a>
+        </div>
+        <div class="header">
+            <marquee direction="left" scrollamount="5" 
+                     scrolldelay="60" loop="-1"><h2><img src="images/music.gif" width="52" height="52"><spen style="color:green">**</spen><spen style="color: red">4 ค่ายยักษ์ใหญ่</spen> <spen style="color:green">**</spen><img src="images/music.gif" width="52" height="52"></h2>
+            </marquee>
+          </div>
+          <div class="clear"></div>
+          <div class="nav">
             <ul>
-                <li style="color:red">พี่เบิร์ด ธงไชย แม็คอินไตย</li>
-                <li style="color: blueviolet;">เจ เจตริน วรรธนะสิน</li>
-                <li style="color: dodgerblue;">คริสติน่า อากีล่า</li>
-                <li style="color: orangered;">มอส ปฎิพาน ปฐวีกานต์</li>
-                <li style="color: green;">ทาทายัง</li>
-            </ul>
-    </ul>
-    <hr>
-    <ul>
-        <li>RS Promotion ตัวอย่างเช่น</li>
-            <ul style="list-style-type: square;">
-                <li>กี้ อริสมันต์ พงศ์เรืองรอง</li>
-                <li>เต๋า สมชาย เข็มกลัด</li>
-                <li>3 หนุ่มบอยสเกาท์</li>
-                <li>2 หนุ่มลิฟท์ กับ ออย</li>
-                <li>หนุ่ม ศรราม เทพพิทักษ์</li>
-            </ul>
-    </ul>
-    <hr>
-    <ul>
-        <li>คีตา เรคคอร์ด ตัวอย่างเช่น</li>
-            <ul style="list-style-type: disc;">
-                <li>คู่แฝด ฝันดี-ฝันเด่น</li>
-                <li>3 สาวทีสเกิร์ด</li>
-                <li>แอนเดรีย สวอเรซ</li>
-                <li>"พี่อ๊อฟ" พงษ์พัฒน์ วชิรบรรจง</li>
-            </ul>
-    </ul>
-    <hr>
-    <ul>
-        <li>นิธิทัศน์ โปรโมชั่น ตัวอย่างเช่น</li>
-            <ul style="list-style-type: lower-roman;">
-                <li>คู่แฝด ฝันดี-ฝันเด่น</li>
-                <li>3 สาวทีสเกิร์ด</li>
-                <li>แอนเดรีย สวอเรซ</li>
-                <li>"พี่อ๊อฟ" พงษ์พัฒน์ วชิรบรรจง</li>
-            </ul>
-    </ul>
-    <hr>
+                <li class="homepage"><a href="h.html"><img src="images/home.svg"><span><br>Home</span></a></li>
+                <li class="gmm"><a href="h1.html"><img src="images/gmm-logo.svg"><br><span>Grammy</span></a></li>
+                <li class="rs"><a href="h2.html"><img src="images/rs-logo.jpg"><br><span>Promotion</span></a></li>
+                <li class="kita"><a href="h3.html"><img src="images/kita_logo.png"><br><span>คีตา เรคคอร์ด</span></a></li>
+                <li class="nititad"><a href="h4.html"><img src="images/nititad_logo.png"><br><span>นิธิทัศน์ โปรดักชั่น</span></a></li>
+              </ul>
+          </div>
+          <div class="content">
+            <div class="h">
+                <div class="h-h1"><h1>4 ค่ายเพลงยักษ์ใหญ่ ยุค 90s</h1></div>
+                <p>
+                    ช่วง 30 ปีก่อนหรือที่เราเรียกว่ายุค 90s อย่างมากมาย บางคนก็โด่งดังและมีผลงานต่อเนื่องในวงการ
+            บันเทิงมาจนถึงทุกวันนี้ ซึ่งนักร้องที่ประสบความสำเร็จส่วนใหญ่ ก็มักจะสังกัดค่ายแตกต่างกันออกไป และ 
+            หากมองจริง ๆแล้วก็มีเพียงแค่ 4 ค่ายเท่านั้นที่ถือว่าเป็นค่ายใหญ่ระดับแนวหน้าของประเทศ และยังแย่งชิง 
+            ตลาดเพลงกันอย่างดุเดือน หากค่ายไหนมีนักร้องหน้าใหม่ออกมาอีกค่ายก็ต้องทำออกมาสู้ ซึ่งทั้ง 4 ค่าย 
+            ก็คือแกรมมี่, อาร์เอส, คีตา และ นิธิทัศน์ ซึ่งแต่ละค่ายจะมีศิลปินดัง ๆ มากมายเช่น
+            
+                </p>
+                <ul>
+                    <li><span style="color:palevioletred">Grammy</span> ตัวอย่างเช่น</li>
+                        <ul>
+                            <li style="color:red">พี่เบิร์ด ธงไชย แม็คอินไตย</li>
+                            <li style="color: blueviolet;">เจ เจตริน วรรธนะสิน</li>
+                            <li style="color: dodgerblue;">คริสติน่า อากีล่า</li>
+                            <li style="color: orangered;">มอส ปฎิพาน ปฐวีกานต์</li>
+                            <li style="color: green;">ทาทายัง</li>
+                        </ul>
+                </ul>
+                <hr class="hr" align="left">
+                <ul>
+                    <li style="color: red;">RS Promotion <span style="color: black;">ตัวอย่างเช่น</span></li>
+                        <ul style="list-style-type: square;">
+                            <li style="color: blue;">กี้ อริสมันต์ พงศ์เรืองรอง</li>
+                            <li style="color: green;">เต๋า สมชาย เข็มกลัด</li>
+                            <li style="color: blue;">3 หนุ่มบอยสเกาท์</li>
+                            <li style="color: green;">2 หนุ่มลิฟท์ กับ ออย</li>
+                            <li style="color: blue;">หนุ่ม ศรราม เทพพิทักษ์</li>
+                        </ul>
+                </ul>
+                <hr class="hr" align="left">
+                <ul>
+                    <li>คีตา เรคคอร์ด ตัวอย่างเช่น</li>
+                        <ul style="list-style-type: disc;">
+                            <li>คู่แฝด ฝันดี-ฝันเด่น</li>
+                            <li>3 สาวทีสเกิร์ด</li>
+                            <li>แอนเดรีย สวอเรซ</li>
+                            <li>"พี่อ๊อฟ" พงษ์พัฒน์ วชิรบรรจง</li>
+                        </ul>
+                </ul>
+                <hr class="hr" class="hr" align="left">
+                <ul>
+                    <li>นิธิทัศน์ โปรโมชั่น ตัวอย่างเช่น</li>
+                        <ul style="list-style-type: lower-roman;">
+                            <li>คู่แฝด ฝันดี-ฝันเด่น</li>
+                            <li>3 สาวทีสเกิร์ด</li>
+                            <li>แอนเดรีย สวอเรซ</li>
+                            <li>"พี่อ๊อฟ" พงษ์พัฒน์ วชิรบรรจง</li>
+                        </ul>
+                </ul>
+                <hr class="hr">
+            </div>
+            <div class="backhome"><a href="index.html">Back to Home Page</a></div>
+        </div>
+        <div class="clear"></div>
+        <div class="footer">
+              <h5>© สิทธิ์ติพงษ์ อินธรรม 6634477024</h5>
+        </div>
     </div>
 </body>
 
