--- a/index.html
+++ b/index.html
@@ -10,25 +10,27 @@
   <body>
     <div class="container">
       <div class ="col-reg">
-        <a href="#">สมัครสมาชิก</a>
+        <a href="form.html">สมัครสมาชิก</a>
       </div>
       <div class="header">
         <marquee direction="left" scrollamount="5" 
-                 scrolldelay="60" loop="-1"><h2><spen style="color:green">**</spen><spen style="color: red">4 ค่ายยักษ์ใหญ่</spen> <spen style="color:green">**</spen></h2>
+                 scrolldelay="60" loop="-1"><h2><img src="images/music.gif" width="52" height="52"><spen style="color:green">**</spen><spen style="color: red">4 ค่ายยักษ์ใหญ่</spen> <spen style="color:green">**</spen><img src="images/music.gif" width="52" height="52"></h2>
         </marquee>
       </div>
       <div class="clear"></div>
       <div class="nav">
         <ul>
-            <li class="homepage"><a href="#"><img src="images/home.svg">Home</a></li>
-            <li class="gmm"><a href="#"><img src="images/gmm-logo.svg"><br><span>Grammy</span></a></li>
-            <li class="rs"><a href="#"><img src="images/rs-logo.jpg"><br><span>Promotion</span></a></li>
-            <li class="kita"><a href="#"><img src="images/kita_logo.png"><br><span>คีตา เรคคอร์ด</span></a></li>
-            <li class="nititad"><a href="#"><img src="images/nititad_logo.png"><br><span>นิธิทัศน์ โปรดักชั่น</span></a></li>
+            <li class="homepage"><a href="h.html"><img src="images/home.svg"><span><br>Home</span></a></li>
+            <li class="gmm"><a href="h1.html"><img src="images/gmm-logo.svg"><br><span>Grammy</span></a></li>
+            <li class="rs"><a href="h2.html"><img src="images/rs-logo.jpg"><br><span>Promotion</span></a></li>
+            <li class="kita"><a href="h3.html"><img src="images/kita_logo.png"><br><span>คีตา เรคคอร์ด</span></a></li>
+            <li class="nititad"><a href="h4.html"><img src="images/nititad_logo.png"><br><span>นิธิทัศน์ โปรดักชั่น</span></a></li>
           </ul>
       </div>
       <div class="content">
-        A
+        <div style="background: lightskyblue; padding: 355px 0px 355px 0px; text-align: center;">
+          A
+        </div>
       </div>
     <div class="clear"></div>
     <div class="footer">
