--- a/h.html
+++ b/h.html
@@ -27,7 +27,7 @@
               </ul>
           </div>
           <div class="content">
-            <div class="h">
+            <div class="padding-content">
                 <div class="h-h1"><h1>4 ค่ายเพลงยักษ์ใหญ่ ยุค 90s</h1></div>
                 <p>
                     ช่วง 30 ปีก่อนหรือที่เราเรียกว่ายุค 90s อย่างมากมาย บางคนก็โด่งดังและมีผลงานต่อเนื่องในวงการ
@@ -38,7 +38,7 @@
             
                 </p>
                 <ul>
-                    <li><span style="color:palevioletred">Grammy</span> ตัวอย่างเช่น</li>
+                    <li><span style="color:palevioletred;">Grammy</span> ตัวอย่างเช่น</li>
                         <ul>
                             <li style="color:red">พี่เบิร์ด ธงไชย แม็คอินไตย</li>
                             <li style="color: blueviolet;">เจ เจตริน วรรธนะสิน</li>
@@ -60,22 +60,22 @@
                 </ul>
                 <hr class="hr" align="left">
                 <ul>
-                    <li>คีตา เรคคอร์ด ตัวอย่างเช่น</li>
+                    <li style="color: blue;">คีตา เรคคอร์ด ตัวอย่างเช่น</li>
                         <ul style="list-style-type: disc;">
-                            <li>คู่แฝด ฝันดี-ฝันเด่น</li>
-                            <li>3 สาวทีสเกิร์ด</li>
-                            <li>แอนเดรีย สวอเรซ</li>
-                            <li>"พี่อ๊อฟ" พงษ์พัฒน์ วชิรบรรจง</li>
+                            <li style="color: #7598cc">คู่แฝด ฝันดี-ฝันเด่น</li>
+                            <li style="color: #7598cc">3 สาวทีสเกิร์ด</li>
+                            <li style="color: #7598cc">แอนเดรีย สวอเรซ</li>
+                            <li style="color: #7598cc"><b>"พี่อ๊อฟ"</b> พงษ์พัฒน์ วชิรบรรจง</li>
                         </ul>
                 </ul>
                 <hr class="hr" class="hr" align="left">
                 <ul>
-                    <li>นิธิทัศน์ โปรโมชั่น ตัวอย่างเช่น</li>
+                    <li><span style="color: green;">นิธิทัศน์ โปรโมชั่น </span>ตัวอย่างเช่น</li>
                         <ul style="list-style-type: lower-roman;">
-                            <li>คู่แฝด ฝันดี-ฝันเด่น</li>
-                            <li>3 สาวทีสเกิร์ด</li>
-                            <li>แอนเดรีย สวอเรซ</li>
-                            <li>"พี่อ๊อฟ" พงษ์พัฒน์ วชิรบรรจง</li>
+                            <li style="color: red;">คู่แฝด ฝันดี-ฝันเด่น</li>
+                            <li style="color: red;">3 สาวทีสเกิร์ด</li>
+                            <li style="color: red;">แอนเดรีย สวอเรซ</li>
+                            <li style="color: red;">"พี่อ๊อฟ" พงษ์พัฒน์ วชิรบรรจง</li>
                         </ul>
                 </ul>
                 <hr class="hr">
