--- a/form.html
+++ b/form.html
@@ -70,11 +70,12 @@
             </table>
             </form>
           </div>
+          <div class="backhome"><a href="index.html">Back to Home Page</a></div>
         </div>
       </div>
     <div class="clear"></div>
     <div class="footer">
-          <h5>© สิทธิ์ติพงษ์ อินธรรม 6634477024</h5>
+      <h5>© สิทธิ์ติพงษ์ อินธรรม 6634477024, จตุพร ไชยมาตร 6634477008, ปนัดดา ศรีโยธา 6634477003</h5>
     </div>
     </div>
   </body>
