--- a/h.html
+++ b/h.html
@@ -60,7 +60,7 @@
                 </ul>
                 <hr class="hr" align="left">
                 <ul>
-                    <li style="color: blue;">คีตา เรคคอร์ด ตัวอย่างเช่น</li>
+                    <li style="color: blue;">คีตา เรคคอร์ด <span style="color: black;">ตัวอย่างเช่น</span></li>
                         <ul style="list-style-type: disc;">
                             <li style="color: #7598cc">คู่แฝด ฝันดี-ฝันเด่น</li>
                             <li style="color: #7598cc">3 สาวทีสเกิร์ด</li>
@@ -84,7 +84,7 @@
         </div>
         <div class="clear"></div>
         <div class="footer">
-              <h5>© สิทธิ์ติพงษ์ อินธรรม 6634477024</h5>
+            <h5>© สิทธิ์ติพงษ์ อินธรรม 6634477024, จตุพร ไชยมาตร 6634477008, ปนัดดา ศรีโยธา 6634477003</h5>
         </div>
     </div>
 </body>
