--- a/h1.html
+++ b/h1.html
@@ -2,10 +2,87 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/css.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>GMM Grammy</title>
+    <style>
+        table {
+            width: 60%;
+            margin: auto;
+            border: 1px solid white;
+            border-collapse: collapse;
+            background-color: lightblue; 
+        }
+        th, td {
+            padding: 15px;
+            text-align: center;
+        }
+        th {
+            background-color:lightgreen;
+        }
+    </style>
 </head>
 <body>
-    
+    <div class="container">
+        <div class ="col-reg">
+          <a href="form.html">สมัครสมาชิก</a>
+        </div>
+        <div class="header">
+          <marquee direction="left" scrollamount="5" 
+                   scrolldelay="60" loop="-1"><h2><img src="images/music.gif" width="52" height="52"><spen style="color:green">**</spen><spen style="color: red">4 ค่ายยักษ์ใหญ่</spen> <spen style="color:green">**</spen><img src="images/music.gif" width="52" height="52"></h2>
+          </marquee>
+        </div>
+        <div class="clear"></div>
+        <div class="nav">
+          <ul>
+              <li class="homepage"><a href="h.html"><img src="images/home.svg"><span><br>Home</span></a></li>
+              <li class="gmm"><a href="h1.html"><img src="images/gmm-logo.svg"><br><span>Grammy</span></a></li>
+              <li class="rs"><a href="h2.html"><img src="images/rs-logo.jpg"><br><span>Promotion</span></a></li>
+              <li class="kita"><a href="h3.html"><img src="images/kita_logo.png"><br><span>คีตา เรคคอร์ด</span></a></li>
+              <li class="nititad"><a href="h4.html"><img src="images/nititad_logo.png"><br><span>นิธิทัศน์ โปรดักชั่น</span></a></li>
+            </ul>
+        </div>
+        <div class="content">
+                    <br><div style="text-align: center;"><img src="images/gmm-logo-1.jpg" width="150"></div>
+            <br>
+            <div style="text-align: center; color: red;"><h1>ตัวอย่างเพลงค่าย GMM Grammy</h1></div>
+            <br><br><br>
+            <table>
+                <tr>
+                    <th style="color: yellow;">ชื่อวง/ชื่อศิลปิน</th>
+                    <th style="color: yellow">ตัวอย่างอัลบั้ม</th>
+                    <th style="color: yellow">กด Link เพื่อฟังเพลง</th>
+                </tr>
+                <tr>
+                    <td style="color:red">เบิร์ด ธงไชย แม็คอินไตย</td>
+                    <td><img src="images/20.jpg"width="150"></td>
+                    <td>
+                    <a href="https://www.youtube.com/watch?v=9o6UTS0ecwE" style="color: red;">ด้วยรักและผูกพันธ์
+                    </td>
+                    </a>
+                </tr>
+                <tr>
+                    <td style="color:red">เรวัต พุทธินันทน์</td>
+                    <td><img src="images/30.jpg"width="150"></td>
+                    <td>
+                        <a href="https://www.youtube.com/watch?v=NzDIVwJTef4" style="color: red;">เจ้าสาวที่กลัวฝน    
+                    </td>
+                </tr>
+                <tr>
+                    <td style="color:red">ฐิติมา สุดสุนธร</td>
+                    <td><img src="images/10.jpg"width="150"></td>
+                    <td>
+                        <a href="https://www.youtube.com/watch?v=lwuJy7ftajM" style="color: red;">เจ้าสาวที่กลัวฝน    
+                    </td>
+                </tr>
+            </table>
+            <div class="backhome"><a href="index.html">Back to Home Page</a></div>
+        </div>
+      <div class="clear"></div>
+      
+      <div class="footer">
+        <h5>© สิทธิ์ติพงษ์ อินธรรม 6634477024, จตุพร ไชยมาตร 6634477008, ปนัดดา ศรีโยธา 6634477003</h5>
+    </div>
+      </div>
 </body>
 </html>
