--- a/h2.html
+++ b/h2.html
@@ -2,10 +2,96 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/css.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>RS Promotion</title>
+    <style>
+        h1 {
+            color: red;
+        }
+        table {
+            width: 60%;
+            margin: auto;
+            border: 1px solid white;
+            border-collapse: collapse;
+        }
+        th, td {
+            padding: 10px;
+            text-align: center;
+        }
+        th {
+            background-color:blue;
+        }
+        .cell1 {
+        background-color: lightgreen;
+        }
+        .cell2 {
+         background-color:lightblue;
+        }
+        .cell3 {
+        background-color:violet;
+        }
+    </style>
 </head>
 <body>
-    
+    <div class="container">
+        <div class ="col-reg">
+          <a href="form.html">สมัครสมาชิก</a>
+        </div>
+        <div class="header">
+          <marquee direction="left" scrollamount="5" 
+                   scrolldelay="60" loop="-1"><h2><img src="images/music.gif" width="52" height="52"><spen style="color:green">**</spen><spen style="color: red">4 ค่ายยักษ์ใหญ่</spen> <spen style="color:green">**</spen><img src="images/music.gif" width="52" height="52"></h2>
+          </marquee>
+        </div>
+        <div class="clear"></div>
+        <div class="nav">
+          <ul>
+              <li class="homepage"><a href="h.html"><img src="images/home.svg"><span><br>Home</span></a></li>
+              <li class="gmm"><a href="h1.html"><img src="images/gmm-logo.svg"><br><span>Grammy</span></a></li>
+              <li class="rs"><a href="h2.html"><img src="images/rs-logo.jpg"><br><span>Promotion</span></a></li>
+              <li class="kita"><a href="h3.html"><img src="images/kita_logo.png"><br><span>คีตา เรคคอร์ด</span></a></li>
+              <li class="nititad"><a href="h4.html"><img src="images/nititad_logo.png"><br><span>นิธิทัศน์ โปรดักชั่น</span></a></li>
+            </ul>
+        </div>
+        <div class="content">
+            <div style="text-align: center;"><img src="/images/rs-logo.jpg" width="150"></div>
+            <div style="color: green; text-align: center;"><h3>ตัวอย่างเพลงค่าย RS Promotion</h3></div>
+            <br>
+            <table>
+                <tr>
+                    <th style="color: red;">ชื่อวง/ชื่อศิลปิน</th>
+                    <th style="color: red;">ตัวอย่างอัลบั้ม</th>
+                    <th style="color: red;">กด Link เพื่อฟังเพลง</th>
+                </tr>
+                <tr>
+                    <td class="cell1" style="color:blue">Raptor</td>
+                    <td class="cell1"><img src="/images/40.jpg"width="150"></td>
+                    <td class="cell1">
+                    <a href="https://www.youtube.com/watch?v=Vtm_76deGRA" style="color: blue;">เกรงใจ
+                    </td>
+                    </a>
+                </tr>
+                <tr>
+                    <td class="cell2" style="color:green">D2B</td>
+                    <td class="cell2"><img src="images/50.jpg"width="150"></td>
+                    <td class="cell2">
+                        <a href="https://www.youtube.com/watch?v=Ixq9W1XK3g0" style="color: green;">ซ่าส์...(สั่นๆ)    
+                    </td>
+                </tr>
+                <tr>
+                    <td class="cell3" style="color:red">Lift Oil</td>
+                    <td class="cell3"><img src="images/60.jpg"width="150"></td>
+                    <td class="cell3">
+                        <a href="https://www.youtube.com/watch?v=eiLSMFLHBXc" style="color: red;">ดูไม่ดู 
+                    </td>
+                </tr>
+            </table>
+            <div class="backhome"><a href="index.html">Back to Home Page</a></div>  
+        </div>
+      <div class="clear"></div>
+      <div class="footer">
+        <h5>© สิทธิ์ติพงษ์ อินธรรม 6634477024, จตุพร ไชยมาตร 6634477008, ปนัดดา ศรีโยธา 6634477003</h5>
+    </div>
+      </div>
 </body>
 </html>
