--- a/h3.html
+++ b/h3.html
@@ -2,10 +2,37 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/css.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>คีตา เรคคอร์ด</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class ="col-reg">
+          <a href="form.html">สมัครสมาชิก</a>
+        </div>
+        <div class="header">
+          <marquee direction="left" scrollamount="5" 
+                   scrolldelay="60" loop="-1"><h2><img src="images/music.gif" width="52" height="52"><spen style="color:green">**</spen><spen style="color: red">4 ค่ายยักษ์ใหญ่</spen> <spen style="color:green">**</spen><img src="images/music.gif" width="52" height="52"></h2>
+          </marquee>
+        </div>
+        <div class="clear"></div>
+        <div class="nav">
+          <ul>
+              <li class="homepage"><a href="h.html"><img src="images/home.svg"><span><br>Home</span></a></li>
+              <li class="gmm"><a href="h1.html"><img src="images/gmm-logo.svg"><br><span>Grammy</span></a></li>
+              <li class="rs"><a href="h2.html"><img src="images/rs-logo.jpg"><br><span>Promotion</span></a></li>
+              <li class="kita"><a href="h3.html"><img src="images/kita_logo.png"><br><span>คีตา เรคคอร์ด</span></a></li>
+              <li class="nititad"><a href="h4.html"><img src="images/nititad_logo.png"><br><span>นิธิทัศน์ โปรดักชั่น</span></a></li>
+            </ul>
+        </div>
+        <div class="content">
+         
+        </div>
+      <div class="clear"></div>
+      <div class="footer">
+        <h5>© สิทธิ์ติพงษ์ อินธรรม 6634477024, จตุพร ไชยมาตร 6634477008, ปนัดดา ศรีโยธา 6634477003</h5>
+      </div>
+      </div>
 </body>
 </html>
