--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
     <div class="clear"></div>
     <div class="footer">
-          <h5>© สิทธิ์ติพงษ์ อินธรรม 6634477024</h5>
+      <h5>© สิทธิ์ติพงษ์ อินธรรม 6634477024, จตุพร ไชยมาตร 6634477008, ปนัดดา ศรีโยธา 6634477003</h5>
     </div>
     </div>
   </body>
