--- a/h2.html
+++ b/h2.html
@@ -54,7 +54,7 @@
             </ul>
         </div>
         <div class="content">
-            <div style="text-align: center;"><img src="/images/rs-logo.jpg" width="150"></div>
+            <div style="text-align: center;"><img src="images/rs-logo.jpg" width="150"></div>
             <div style="color: green; text-align: center;"><h3>ตัวอย่างเพลงค่าย RS Promotion</h3></div>
             <br>
             <table>
@@ -65,7 +65,7 @@
                 </tr>
                 <tr>
                     <td class="cell1" style="color:blue">Raptor</td>
-                    <td class="cell1"><img src="/images/40.jpg"width="150"></td>
+                    <td class="cell1"><img src="images/40.jpg"width="150"></td>
                     <td class="cell1">
                     <a href="https://www.youtube.com/watch?v=Vtm_76deGRA" style="color: blue;">เกรงใจ
                     </td>
