Add title form page

--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/css.css">
     <meta charset="UTF-8">
-    <title>Home Page</title>
+    <title>สมัครสมาชิก</title>
 <style>
       table{
         background-color: #FD9A9C;
@@ -13,7 +13,6 @@
       td{
         padding: 10px 30px 10px 30px;
         border: 0.5px solid white;
-        
       } 
 </style>
   </head>
