--- a/h1.html
+++ b/h1.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai:wght@100;200;300;400;500;600;700&family=Russo+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/css.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GMM Grammy</title>
@@ -11,14 +14,14 @@
             margin: auto;
             border: 1px solid white;
             border-collapse: collapse;
-            background-color: lightblue; 
+            background-color: #DAEEF3; 
         }
         th, td {
             padding: 15px;
             text-align: center;
         }
         th {
-            background-color:lightgreen;
+            background-color:#92D050;
         }
     </style>
 </head>
@@ -28,9 +31,9 @@
           <a href="form.html">สมัครสมาชิก</a>
         </div>
         <div class="header">
-          <marquee direction="left" scrollamount="5" 
-                   scrolldelay="60" loop="-1"><h2><img src="images/music.gif" width="52" height="52"><spen style="color:green">**</spen><spen style="color: red">4 ค่ายยักษ์ใหญ่</spen> <spen style="color:green">**</spen><img src="images/music.gif" width="52" height="52"></h2>
-          </marquee>
+            <marquee direction="left" scrollamount="5" 
+            scrolldelay="60" loop="-1"><h2><img src="images/music.gif" width="52" height="52"><spen style="color:green">**</spen><spen style="color: red">4</spen><span style="color:#5B9BD5"> ค่ายเพลงยักษ์ใหญ่</span> <spen style="color:green">**</spen><img src="images/music.gif" width="52" height="52"></h2>
+            </marquee>
         </div>
         <div class="clear"></div>
         <div class="nav">
@@ -46,7 +49,7 @@
                     <br><div style="text-align: center;"><img src="images/gmm-logo-1.jpg" width="150"></div>
             <br>
             <div style="text-align: center; color: red;"><h1>ตัวอย่างเพลงค่าย GMM Grammy</h1></div>
-            <br><br><br>
+            <br>
             <table>
                 <tr>
                     <th style="color: yellow;">ชื่อวง/ชื่อศิลปิน</th>
