--- a/h2.html
+++ b/h2.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai:wght@100;200;300;400;500;600;700&family=Russo+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/css.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RS Promotion</title>
@@ -39,9 +42,9 @@
           <a href="form.html">สมัครสมาชิก</a>
         </div>
         <div class="header">
-          <marquee direction="left" scrollamount="5" 
-                   scrolldelay="60" loop="-1"><h2><img src="images/music.gif" width="52" height="52"><spen style="color:green">**</spen><spen style="color: red">4 ค่ายยักษ์ใหญ่</spen> <spen style="color:green">**</spen><img src="images/music.gif" width="52" height="52"></h2>
-          </marquee>
+            <marquee direction="left" scrollamount="5" 
+            scrolldelay="60" loop="-1"><h2><img src="images/music.gif" width="52" height="52"><spen style="color:green">**</spen><spen style="color: red">4</spen><span style="color:#5B9BD5"> ค่ายเพลงยักษ์ใหญ่</span> <spen style="color:green">**</spen><img src="images/music.gif" width="52" height="52"></h2>
+            </marquee>
         </div>
         <div class="clear"></div>
         <div class="nav">
