--- a/h3.html
+++ b/h3.html
@@ -8,6 +8,57 @@
     <link rel="stylesheet" href="css/css.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>คีตา เรคคอร์ด</title>
+    <style>
+      body {
+          font-family: Arial, sans-serif;
+          text-align: center;
+      }
+      .title-container {
+          text-align: center;
+      }
+      .title-container img {
+          width: 150px;
+      }
+      .title-container p {
+          font-size: 28px;
+          color: rgb(8, 111, 207);
+          font: weight 100;
+      }
+      table {
+          width: 80%;
+          margin: auto;
+          border-collapse: separate;
+          border-spacing: 3px;
+      }
+      th, td {
+          border: 1px solid black;
+          padding: 10px;
+          text-align: center;
+      }
+      .title {
+          font-size: 28px;
+          font-weight: bold;
+          color: black;
+          position: relative;
+          animation:alternate-reverse 
+
+      }
+      .header1 { background-color: gray; }
+      .header2 { background-color: lightblue; color: red; }
+      .header3 { background-color: yellow; color: red; }
+      .header4 { background-color: rgb(239, 146, 162); color: red; }
+      td a { color: red; font-weight: bold; }
+      .gif-cell {
+          text-align: center;
+      }
+      .gif1 { background-color: yellow; }
+      .gif2 { background-color: rgb(103, 196, 250); }
+      .gif3 { background-color: gray; }
+      .artist-name { color: rgb(13, 165, 13); font-weight: bold; }
+      .artist-details { color: red; font-weight: bold; }
+      .band-name { color: red; background-color: white; font-weight: bold; }
+  </style>
+
 </head>
 <body>
     <div class="container">
@@ -30,7 +81,41 @@
             </ul>
         </div>
         <div class="content">
-         
+          <div class="title-container">
+            <img src="images/kita_logo.png" alt="Kita Records Logo">
+            <p>ตัวอย่างเพลงค่าย คีตา เรคคอร์ด</p>
+        </div>
+        <table>
+            <tr>
+                <th class="header1" colspan="3" class="title">***KITA***</th>
+            </tr>
+            <tr>
+                <th class="header2">ชื่อวง</th>
+                <th class="header3">ตัวอย่างอัลบั้ม</th>
+                <th class="header4">กด LINK เพื่อฟังเพลง</th>
+            </tr>
+            <tr>
+                <td class="band-name">ฝันดี ฝันเด่น</td>
+                <td><img src="images/ฝันดี ฝันเด่น.jpg" alt="ฝันดี ฝันเด่น" width="100"></td>
+                <td>
+                    <a href="https://www.youtube.com/watch?v=VYwgR61A2Qg" target="_blank">แกล้งโง่</a><br>
+                    <a href="https://www.youtube.com/watch?v=8BVK98LhqME" target="_blank">หมื่นคำลา</a>
+                </td>
+            </tr>
+            <tr>
+                <td><span class="artist-name">อ๊อฟ</span> <span class="artist-details">พงษ์พัฒน์ วชิรบรรจง</span></td>
+                <td><img src="images/อ๊อฟ พงษ์พัฒน์.jpggit" alt="อ๊อฟ พงษ์พัฒน์" width="100"></td>
+                <td>
+                    <a href="https://www.youtube.com/watch?v=sSGzUthHGt8" target="_blank">ใจนักเลง</a><br>
+                    <a href="https://www.youtube.com/watch?v=sdYJ5z1PGsY" target="_blank">ความสุขเล็กๆ</a>
+                </td>
+            </tr>
+            <tr>
+                <td class="gif-cell gif1"><img src="images/G1.gif" alt="Gif Animation " width="100"></td>
+                <td class="gif-cell gif2"><img src="images/G2.gif" alt="Gif Animation " width="100"></td>
+                <td class="gif-cell gif3"><img src="images/G3.gif" alt="Gif Animation " width="100"></td>
+            </tr>
+        </table>S
         </div>
       <div class="clear"></div>
       <div class="footer">
