--- a/h3.html
+++ b/h3.html
@@ -104,7 +104,7 @@
             </tr>
             <tr>
                 <td><span class="artist-name">อ๊อฟ</span> <span class="artist-details">พงษ์พัฒน์ วชิรบรรจง</span></td>
-                <td><img src="images/อ๊อฟ พงษ์พัฒน์.jpggit" alt="อ๊อฟ พงษ์พัฒน์" width="100"></td>
+                <td><img src="images/อ๊อฟ พงษ์พัฒน์.jpg" alt="อ๊อฟ พงษ์พัฒน์" width="100"></td>
                 <td>
                     <a href="https://www.youtube.com/watch?v=sSGzUthHGt8" target="_blank">ใจนักเลง</a><br>
                     <a href="https://www.youtube.com/watch?v=sdYJ5z1PGsY" target="_blank">ความสุขเล็กๆ</a>
@@ -115,7 +115,7 @@
                 <td class="gif-cell gif2"><img src="images/G2.gif" alt="Gif Animation " width="100"></td>
                 <td class="gif-cell gif3"><img src="images/G3.gif" alt="Gif Animation " width="100"></td>
             </tr>
-        </table>S
+        </table>
         </div>
       <div class="clear"></div>
       <div class="footer">
