Add Detail Pagr 3-4

--- a/h4.html
+++ b/h4.html
@@ -10,7 +10,6 @@
     <title>นิธิทัศน์ โปรดักชั่น</title>
     <style>
       body {
-          font-family: Arial, sans-serif;
           text-align: center;
           background-image: url('background.jpg');
           background-size: cover;
@@ -75,7 +74,7 @@
                 <th class="header1">ตัวอย่างคลิป Video</th>
             </tr>
             <tr>
-                <td class="band-name"><span class="black">วง</span> <span class="red">ชาตรี</span></td>
+                <td class="band-name"><span class="black">วง<br></span> <span class="red">ชาตรี</span></td>
                 <td>
                     <video width="300" height="250" controls>
                         <source src="/videos/ดอกไม้ป่า.mp4" type="video/mp4">
@@ -84,7 +83,7 @@
                 </td>
             </tr>
             <tr>
-                <td class="band-name"><span class="red">คณะ</span> <span class="black">ดอกไม้ป่า</span></td>
+                <td class="band-name"><span class="red">คณะ<br></span> <span class="black">ดอกไม้ป่า</span></td>
                 <td>
                     <video width="300" height="250" controls>
                         <source src="/videos/ชาตรี.mp4" type="video/mp4">
@@ -93,6 +92,7 @@
                 </td>
             </tr>
         </table>
+        <div class="backhome"><a href="index.html">Back to Home Page</a></div>  
         </div>
       <div class="clear"></div>
       <div class="footer">
