--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <a href="form.html">สมัครสมาชิก</a>
       </div>
       <div class="header">
-        <marquee direction="left" scrollamount="5" 
-                 scrolldelay="60" loop="-1"><h2><img src="images/music.gif" width="52" height="52"><spen style="color:green">**</spen><spen style="color: red">4</spen><span style="color:#5B9BD5"> ค่ายเพลงยักษ์ใหญ่</span> <spen style="color:green">**</spen><img src="images/music.gif" width="52" height="52"></h2>
+        <marquee direction="left" scrollamount="5" scrolldelay="60" loop="-1">
+          <h2><img src="images/music.gif" width="52" height="52"><spen style="color:green">**</spen><spen style="color: red">4</spen><span style="color:#5B9BD5"> ค่ายเพลงยักษ์ใหญ่</span> <spen style="color:green">**</spen><img src="images/music.gif" width="52" height="52"></h2>
         </marquee>
       </div>
       <div class="clear"></div>
