--- a/h3.html
+++ b/h3.html
@@ -10,7 +10,6 @@
     <title>คีตา เรคคอร์ด</title>
     <style>
       body {
-          font-family: Arial, sans-serif;
           text-align: center;
       }
       .title-container {
@@ -27,10 +26,15 @@
       table {
           width: 80%;
           margin: auto;
-          border-collapse: separate;
+          border-collapse: collapse;
           border-spacing: 3px;
       }
-      th, td {
+      th{
+          border: 1px solid black;
+          text-align: center;
+          font-weight: bold;
+      }
+      td {
           border: 1px solid black;
           padding: 10px;
           text-align: center;
@@ -41,22 +45,26 @@
           color: black;
           position: relative;
           animation:alternate-reverse 
-
-      }
-      .header1 { background-color: gray; }
+  }
+  .kita_top_table{
+    font-size: 28px;
+    background-color: gray;
+    padding: 20px 10px;
+  }
+      
       .header2 { background-color: lightblue; color: red; }
       .header3 { background-color: yellow; color: red; }
       .header4 { background-color: rgb(239, 146, 162); color: red; }
-      td a { color: red; font-weight: bold; }
+      td a { color: red}
       .gif-cell {
           text-align: center;
       }
       .gif1 { background-color: yellow; }
       .gif2 { background-color: rgb(103, 196, 250); }
       .gif3 { background-color: gray; }
-      .artist-name { color: rgb(13, 165, 13); font-weight: bold; }
-      .artist-details { color: red; font-weight: bold; }
-      .band-name { color: red; background-color: white; font-weight: bold; }
+      .artist-name { color: rgb(13, 165, 13)}
+      .artist-details { color: red}
+      .band-name { color: red; background-color: white}
   </style>
 
 </head>
@@ -87,7 +95,7 @@
         </div>
         <table>
             <tr>
-                <th class="header1" colspan="3" class="title">***KITA***</th>
+                <td colspan="3" class="kita_top_table"><marquee direction="left" scrollamount="5" scrolldelay="60" loop="-1"><b>***KITA***</b></marquee></td>
             </tr>
             <tr>
                 <th class="header2">ชื่อวง</th>
@@ -96,15 +104,15 @@
             </tr>
             <tr>
                 <td class="band-name">ฝันดี ฝันเด่น</td>
-                <td><img src="images/ฝันดี ฝันเด่น.jpg" alt="ฝันดี ฝันเด่น" width="100"></td>
+                <td style="text-align: right;"><img src="images/ฝันดี ฝันเด่น.jpg" alt="ฝันดี ฝันเด่น" width="150" height="150"></td>
                 <td>
                     <a href="https://www.youtube.com/watch?v=VYwgR61A2Qg" target="_blank">แกล้งโง่</a><br>
                     <a href="https://www.youtube.com/watch?v=8BVK98LhqME" target="_blank">หมื่นคำลา</a>
                 </td>
             </tr>
             <tr>
-                <td><span class="artist-name">อ๊อฟ</span> <span class="artist-details">พงษ์พัฒน์ วชิรบรรจง</span></td>
-                <td><img src="images/อ๊อฟ พงษ์พัฒน์.jpg" alt="อ๊อฟ พงษ์พัฒน์" width="100"></td>
+                <td><span class="artist-name">อ๊อฟ<br></span> <span class="artist-details">พงษ์พัฒน์ วชิรบรรจง</span></td>
+                <td style="text-align: left;"><img src="images/อ๊อฟ พงษ์พัฒน์.jpg" alt="อ๊อฟ พงษ์พัฒน์" width="150" height="150"></td>
                 <td>
                     <a href="https://www.youtube.com/watch?v=sSGzUthHGt8" target="_blank">ใจนักเลง</a><br>
                     <a href="https://www.youtube.com/watch?v=sdYJ5z1PGsY" target="_blank">ความสุขเล็กๆ</a>
@@ -116,6 +124,7 @@
                 <td class="gif-cell gif3"><img src="images/G3.gif" alt="Gif Animation " width="100"></td>
             </tr>
         </table>
+        <div class="backhome"><a href="index.html">Back to Home Page</a></div>  
         </div>
       <div class="clear"></div>
       <div class="footer">
